# idm-clone

./: .gitignore  BUILD.md  CMakeLists.txt  IDMClone.sln  IDMClone.vcxproj  IDMClone.vcxproj.filters  README.md
ci/: build.yml
src/: IDMApp.cpp  IDMApp.h  resource.h  stdafx.cpp  stdafx.h  targetver.h
src/browser/: BrowserMonitor.cpp  BrowserMonitor.h  ComServer.cpp  ComServer.h  NativeMessaging.cpp  NativeMessaging.h  VideoDetector.cpp  VideoDetector.h
src/core/: AuthManager.cpp  AuthManager.h  ConnectionPool.cpp  ConnectionPool.h  CookieJar.cpp  CookieJar.h  DownloadEngine.cpp  DownloadEngine.h  FileAssembler.cpp  FileAssembler.h  FtpClient.cpp  FtpClient.h  HttpClient.cpp  HttpClient.h  ProxyManager.cpp  ProxyManager.h  ResumeEngine.cpp  ResumeEngine.h  SegmentManager.cpp  SegmentManager.h  SpeedLimiter.cpp  SpeedLimiter.h
src/extension/: background.js  content.js  manifest.json  popup.html  popup.js  video_detector.js
src/resources/: IDM.rc  IDMClone.manifest
src/ui/: AddUrlDialog.cpp  AddUrlDialog.h  BatchDownloadDialog.cpp  BatchDownloadDialog.h  CategoryTreeView.cpp  CategoryTreeView.h  DownloadListView.cpp  DownloadListView.h  GrabberDialog.cpp  GrabberDialog.h  MainFrame.cpp  MainFrame.h  OptionsDialog.cpp  OptionsDialog.h  ProgressDialog.cpp  ProgressDialog.h  SchedulerDialog.cpp  SchedulerDialog.h  SegmentBar.cpp  SegmentBar.h  SkinManager.cpp  SkinManager.h  SpeedGraph.cpp  SpeedGraph.h
src/util/: Crypto.cpp  Crypto.h  Database.cpp  Database.h  Logger.cpp  Logger.h  Registry.cpp  Registry.h  Unicode.cpp  Unicode.h
